--- a/orders/templates/orders/my_orders.html
+++ b/orders/templates/orders/my_orders.html
@@ -14,11 +14,7 @@
                 {% if item.order_done == True %}
                     <i class="fa fa-check"></i>
                     <small> <---- Этот заказ готов!</small>
-                    <div>
-                        <script src="https://www.paypal.com/sdk/js?client-id=test"></script>
-                        <script>paypal.Buttons().render('body');</script>
-                    </div>
-                    <!--<div><input type="button" name="" value="Оплатить" class="button17" tabindex="0"></div>-->
+                    <div><a href="{% url "payment" %}" class="button17" tabindex="0">Оплатить</a></div>
                 {% else %}
                     <i class="fa fa-times"></i>
                 {% endif %}
