--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -2,9 +2,16 @@
 
 {% block body %}
     <div style="text-align:center">
-        <a href="{% url "payment_confirmation" %}"><input class="btn btn-outline-success" type="button" value="Оплата картой">
-        </a>
-        <a href="{% url "payment_confirmation" %}"><input class="btn btn-outline-success" type="button" value="Наличными">
-        </a>
+        <div align="center">
+        	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="BSJ3CJHLSAMUY">
+			<input type="image" src="https://www.paypalobjects.com/ru_RU/RU/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal — более безопасный и легкий способ оплаты через Интернет!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
+			</form>
+
+            <!--<script src="https://www.paypal.com/sdk/js?client-id=test"></script>
+            <script>paypal.Buttons().render('body');</script>-->
+        </div>
     </div>
 {% endblock %}
