--- a/orders/templates/orders/welcome.html
+++ b/orders/templates/orders/welcome.html
@@ -12,7 +12,7 @@
                     <div class="mt-2 col-md-12"></div>
                     <div class="mt-2 col-md-12"></div>
                     <div class="mt-2 col-md-12"></div>
-                    <p class="lead">Если вы хотите сделать заказ, просто авторизуйтесь на нашей странице и выберите из меню то, что Вы хотите.</p>
+                    <p class="lead">Если вы хотите сделать заказ выберите из меню то, что Вы хотите.</p>
                 </div>
             </div>
         </div>
