--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -17,7 +17,7 @@
                     <thead>
                     <tr>
                         <th scope="col" width="70%">Название</th>
-                        <th scope="col" width="15%">Малькая</th>
+                        <th scope="col" width="15%">Маленькая</th>
                         <th scope="col" width="15%">Большая</th>
                     </tr>
                     </thead>
